# fucci_analysis

./: .gitignore  Antibody_Columns_means_to_Row_means.py  Antibody_Frame_means_to_Columns_means.py  Antibody_Parser.py  Antibody_Parser_BRDU_from_analysis_folder.py  Antibody_Parser_GFAP_positive_cells_wt_fold_change_from_analysis_folder.py  Antibody_Parser_Ki67.py  Antibody_Parser_PH_Ki67_LC3_C3_wt_backg_subs_and_fold_change_from_analysis_folder.py  Antibody_Parser_PhosHist.py  Antibody_Parser_YAP_and_fold_change_from_analysis_folder.py  Antibody_Parser_and_fold_change_from_analysis_folder_separated_image_ids.py  Antibody_Parser_wt_backg_subs_and_fold_change.py  Antibody_Parser_wt_backg_subs_and_fold_change_from_analysis_folder.py  Antibody_Parser_wt_backg_subs_and_fold_change_from_analysis_folder_separated_rows.py  Antibody_Sheet_Combiner.py  Antibody_Sheet_Date_Separator.py  Box_or_Bar_plot_Normalized_Antibody_data.py  Box_or_Bar_plot_Normalized_Antibody_data_SubDirs.py  Box_or_Bar_plot_Normalized_Antibody_data_combined.py  Box_or_Bar_plot_Normalized_Antibody_data_combined_U87.py  Box_or_Bar_plot_Normalized_Antibody_data_combined_from_analysis_folder.py  Box_or_Bar_plot_Normalized_Antibody_data_combined_from_analysis_folder_DiBac.py  Box_or_Bar_plot_Normalized_Antibody_data_combined_from_analysis_folder_NG108.py  Box_or_Bar_plot_Normalized_Antibody_data_combined_from_analysis_folder_U87.py  Box_or_Bar_plot_Normalized_Antibody_data_from_analysis_folder.py  Box_or_Bar_plot_Normalized_Antibody_data_mini.py  Box_or_Bar_plot_positive_counts_Antibody_data_from_analysis_folder.py  (+40 more)
(+8 files in other folders)
