[tool.poetry]
name = "fucci_analysis"
version = "0.1.0"
description = ""
authors = ["Adam Strandberg <adamstrandberg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.1"
seaborn = "^0.10.1"
pandas = "^1.1.1"
scipy = "^1.5.2"
statsmodels = "^0.12.0"
matplotlib = "^3.3.1"
openpyxl = "^3.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
